# MeetifyrProject

./: Organizations.md  README.md
AWSProject/: goals.txt  (+2 more)
Django/: NOTEME.md  db.sqlite3  pyproject.toml
Django/boards/: admin.py  models.py
Django/boards/migrations/: 0001_initial.py  0002_board_created_at_board_updated_at.py  0003_board_user.py
Django/config/: authentication.py  settings.py  urls.py
Django/feeds/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
Django/feeds/migrations/: 0001_initial.py
Django/reviews/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
Django/reviews/migrations/: 0001_initial.py  0002_remove_review_created_at_remove_review_updated_at.py
Django/users/: admin.py  models.py  serializers.py  urls.py  views.py
Django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_alter_user_email_alter_user_username.py  0004_remove_user_is_business.py
Meetifyr/: .coverage  .dmypy.json  .env.txt  NOTEME.md  asgi.py  conftest.py  pyproject.toml
Meetifyr/.github/workflows/: ci.yml
Meetifyr/app/: __init__.py
Meetifyr/app/configs/: __init__.py  base_config.py  tortoise_config.py
Meetifyr/app/dtos/: create_meeting_response.py  frozen_config.py  get_meeting_response.py  turn_on_off_star_participant_date_request.py  update_meeting_request.py
Meetifyr/app/services/: meeting_service_mysql.py  participant_date_mysql.py  participant_service_mysql.py
Meetifyr/app/tortoise_models/: base_model.py  meeting.py  participant.py  participant_date.py
Meetifyr/app/utils/: base62.py  squids.py
Meetifyr/migrations/models/: 1_20250714170005_update.py  2_20250715115411_update.py
(+151 files in other folders)
